@@ -39,7 +39,7 @@ AC_SEARCH_LIBS(wbkgdset, ncurses,,echo "*** Unable to find ncurses on your syste
 
 dnl Note: need to be in the correct order, and some are needed twice.
 dnl Not very pretty... Maybe someone knows how to fix this?
-DOLFIN_KERNEL="io grid fem elements quadrature io la math common settings log settings common"
+DOLFIN_KERNEL="io grid fem elements quadrature grid io la math common settings log settings common"
 
 dnl Find modules
 cd src/modules
