@@ -1,1 +1,1 @@
-SUBDIRS = test grid la fem solvers
+SUBDIRS = test grid la fem quadrature solvers
