@@ -11,8 +11,11 @@ using namespace dolfin;
 //-----------------------------------------------------------------------------
 DenseMatrix::DenseMatrix(int m, int n) : Variable("A", "A dense matrix")
 {
-  if ( m <= 0 || n <= 0 )
-    dolfin_error("Illegal dimensions.");
+  if ( m <= 0 )
+    dolfin_error("Number of rows must be positive.");
+
+  if ( n <= 0 )
+    dolfin_error("Number of columns must be positive.");
   
   values = 0;
   permutation = 0;
@@ -20,8 +23,23 @@ DenseMatrix::DenseMatrix(int m, int n) : Variable("A", "A dense matrix")
   init(m,n);
 }
 //-----------------------------------------------------------------------------
-DenseMatrix::DenseMatrix(Matrix& A) : Variable("A", "A dense matrix")
+DenseMatrix::DenseMatrix(const DenseMatrix& A) : Variable("A", "A dense matrix")
 {
+  values = 0;
+  permutation = 0;
+
+  init(A.m, A.n);
+
+  for (int i = 0; i < n; i++)
+    for (int j = 0; j < n; j++)
+      values[i][j] = A.values[i][j];
+}
+//-----------------------------------------------------------------------------
+DenseMatrix::DenseMatrix(const Matrix& A) : Variable("A", "A dense matrix")
+{
+  values = 0;
+  permutation = 0;
+
   init(A.size(0), A.size(1));
   
   int j;
@@ -31,21 +49,23 @@ DenseMatrix::DenseMatrix(Matrix& A) : Variable("A", "A dense matrix")
     for (int pos = 0; pos < A.rowSize(i); pos++){
       value = A(i,&j,pos);
       values[i][j] = value;
-    }
-  
+    }  
 }
 //-----------------------------------------------------------------------------
 void DenseMatrix::init(int m, int n)
 {
-  if ( m <= 0 || n <= 0 )
-    dolfin_error("DenseMatrix::init(): Illegal dimensions.");
+  if ( m <= 0 )
+    dolfin_error("Number of rows must be positive.");
+
+  if ( n <= 0 )
+    dolfin_error("Number of columns must be positive.");
   
   if ( values ){
-    for (int i=0;i<m;i++)
-      delete values[i];
+    for (int i = 0; i < m; i++)
+      delete [] values[i];
     
-    delete values;
-    delete permutation;
+    delete [] values;
+    delete [] permutation;
   }
   
   this->m = m;
@@ -66,11 +86,16 @@ void DenseMatrix::init(int m, int n)
 //-----------------------------------------------------------------------------
 DenseMatrix::~DenseMatrix()
 {
-  for (int i = 0; i < m; i++)
-    delete [] values[i];
-  
-  delete [] values;
-  delete [] permutation;
+  if ( values ) {
+    for (int i = 0; i < m; i++)
+      delete [] values[i];
+    delete [] values;
+    values = 0;
+  }
+
+  if ( permutation )
+    delete [] permutation;
+  permutation = 0;
 }
 //-----------------------------------------------------------------------------
 real& DenseMatrix::operator() (int i, int j)
@@ -91,24 +116,65 @@ int DenseMatrix::size(int dim) const
     return n;
 }
 //-----------------------------------------------------------------------------
-void DenseMatrix::solve(Vector& x, Vector& b)
+void DenseMatrix::solve(Vector& x, const Vector& b)
 {
   DirectSolver solver;
-
   solver.solve(*this, x, b);
+}
+//-----------------------------------------------------------------------------
+void DenseMatrix::inverse(DenseMatrix& Ainv)
+{
+  DirectSolver solver;
+  solver.inverse(*this, Ainv);
+}
+//-----------------------------------------------------------------------------
+void DenseMatrix::hpsolve(Vector& x, const Vector& b) const
+{
+  DirectSolver solver;
+  solver.hpsolve(*this, x, b);
 }
 //-----------------------------------------------------------------------------
 void DenseMatrix::lu()
 {
   DirectSolver solver;
-
   solver.lu(*this);
 }
 //-----------------------------------------------------------------------------
-void DenseMatrix::lusolve(Vector& x, Vector& b)
+void DenseMatrix::solveLU(Vector& x, const Vector& b) const
 {
   DirectSolver solver;
-
-  solver.lusolve(*this, x, b);
+  solver.solveLU(*this, x, b);
+}
+//-----------------------------------------------------------------------------
+void DenseMatrix::inverseLU(DenseMatrix& Ainv) const
+{
+  DirectSolver solver;
+  solver.inverseLU(*this, Ainv);
+}
+//-----------------------------------------------------------------------------
+void DenseMatrix::hpsolveLU(const DenseMatrix& LU,
+			    Vector& x, const Vector& b) const
+{
+  DirectSolver solver;
+  solver.hpsolveLU(LU, *this, x, b);
+}
+//-----------------------------------------------------------------------------
+void DenseMatrix::show() const 
+{
+  for (int i = 0; i < m; i++) {
+    cout << "| ";
+    for (int j = 0; j < n; j++){
+      cout << (*this)(i,j) << " ";
+    }
+    cout << "|" << endl;
+  }
+}
+//-----------------------------------------------------------------------------
+dolfin::LogStream& dolfin::operator<< (LogStream& stream, const DenseMatrix& A)
+{
+  int m = A.size(0);
+  int n = A.size(1);
+  
+  stream << "[ Dense matrix of size " << m << " x " << n << " ]";
 }
 //-----------------------------------------------------------------------------
